fix width on mobile

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ hr {
 }
 
 .container {
-	width: 47%;
+	width: 68%;
 	margin: 3em auto;
 	max-width: 560px;
 	text-align: center;
